# bareASGI-auth-server-ldap

./: README.md  pyproject.toml
bareasgi_auth_server_ldap/: app.py  config.py  ldap_auth_service.py  server.py
bareasgi_auth_server_ldap/entrypoint/: startup.py
etc/: config.yaml
tests/: test_config.py
