[tool.poetry]
name = "bareASGI-auth-server-ldap"
version = "0.1.0"
description = "LDAP Authentication server for bareASGI"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "bareasgi_auth_server_ldap" },
]

[tool.poetry.dependencies]
python = "^3.7"
bareasgi = "^3.7"
# bareasgi-auth-common = "^2.0"
# bareasgi-auth-server = "^1.0"
bareasgi-cors = "^3.1"
PyYaml = "^5.4"
hypercorn = "^0.11"
bareclient = "^4.6"
PyJWT = "^1.7"
bonsai = "^1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5"
mypy = "^0.910"
pytest = "^3.8"
pylint = "^2.9"

[tool.poetry.extras]
postgres = [ "aiopg", "sqlalchemy" ]
ldap = [ "bonsai" ]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
