[tool.poetry]
name = "bareASGI-auth-server-ldap"
version = "0.1.0"
description = "LDAP Authentication server for bareASGI"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "bareasgi_auth_server_ldap" },
]

[tool.poetry.dependencies]
python = "^3.8"
bareasgi-auth-server = "^4.0"
PyYaml = "^5.4"
hypercorn = "^0.11"
bonsai = "^1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5"
mypy = "^0.910"
pytest = "^3.8"
pylint = "^2.9"
types-PyYAML = "^5.4"

[tool.poetry.extras]
ldap = [ "bonsai" ]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
